--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,17 @@
 {
   "name": "backend",
   "private": true,
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "description": "A Strapi application",
+  "scripts": {
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
+  },
+  "dependencies": {
+    "@strapi/plugin-i18n": "^4.2.3",
+    "@strapi/strapi": "^4.2.3",
+    "better-sqlite3": "^7.6.2"
+  }
 }
